--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ h1,h2,h3,h4,h5
 /************Timeline**************/
 /* Timeline Container */
 #timeline{
-	background-color: #A6CFD5;
+	background-color: #F0CF65;
 }
 
 .timeline {
@@ -263,7 +263,7 @@ h1,h2,h3,h4,h5
 /* start home */
 #home
 	{
-        background-color: #C2E7D9;
+        background-color: #BD4F6C;
         background-size: cover;
         background-repeat: no-repeat;
         padding-top: 120px;
@@ -306,7 +306,7 @@ h1,h2,h3,h4,h5
 /* start work */
 #work
     {
-        background: #26408B;
+        background: #D7816A;
     }
 #work h2
     {
@@ -348,7 +348,7 @@ h1,h2,h3,h4,h5
 /* start about */
 #about{
 	padding-bottom: 15px;
-	background-color: #0F084B;
+	background-color: #DDEDAA;
 }
 
 #about h4
@@ -388,7 +388,7 @@ h1,h2,h3,h4,h5
 #speech
     {
         text-align: center;
-				background-color: #0D0221;
+				background-color: #93B5C6;
     }
 
 		.bubble {
