--- a/css/style.css
+++ b/css/style.css
@@ -452,6 +452,7 @@ footer
         border-top: 1px solid #090909;
         text-align: center;
 		    padding: 140px 0px;
+				background-color: #2F0601;
 		}
 footer hr
     {
