--- a/css/style.css
+++ b/css/style.css
@@ -110,8 +110,8 @@ h1,h2,h3,h4,h5
   font-size: 0.7em;
   color: black; }
 
-
-	main {
+//////////////////////////////////
+	#timeline {
 	  min-width: 300px;
 	  max-width: 500px;
 	  margin: auto;
