--- a/css/style.css
+++ b/css/style.css
@@ -304,6 +304,9 @@ h1,h2,h3,h4,h5
         padding: 25px 35px;
         margin: 30px 0;
     }
+#home p{
+	color: black;
+}
 #home h2
     {
         padding-bottom: 10px;
