--- a/css/style.css
+++ b/css/style.css
@@ -67,51 +67,6 @@ h1,h2,h3,h4,h5
 /* Timeline Container */
 #timeline{
 	background-color: #32908F;
-}
-
-.timeline {
-	background-color: #A6CFD5;
-  border-left: 5px solid #dddddd;
-  padding-bottom: 3em;
-  position: relative; }
-  .timeline:before {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: -1.47em;
-    width: 40px;
-    height: 40px;
-    border-radius: 40px;
-    background: #dddddd;
-    border: 5px solid #dddddd; }
-
-/* Individual Timeline Item */
-.tl-node {
-  padding-left: 1em;
-  margin-bottom: 3em;
-  position: relative;
-	color: #FFFFFF;
- }
-  .tl-node a {
-    display: block; }
-  .tl-node:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: -0.95em;
-    width: 20px;
-    height: 20px;
-    border-radius: 20px;
-    background: #fff;
-    border: 5px solid #dddddd; }
-
-/* Timestamp */
-.tl-stamp {
-  font-size: 0.7em;
-  color: black; }
-
-//////////////////////////////////
-#timeline {
 	  min-width: 300px;
 	  max-width: 500px;
 	  margin: auto;
@@ -128,7 +83,7 @@ h1,h2,h3,h4,h5
 	  padding: 40px;
 	  counter-increment: section;
 	  position: relative;
-	  color: $black;
+	  color: black;
 
 	  //numbers
 	  #timeline &:before {
