--- a/css/style.css
+++ b/css/style.css
@@ -248,6 +248,11 @@ h1,h2,h3,h4,h5
         padding-bottom: 140px;
         text-align: center;
 	}
+
+#home colour{
+	color: black;
+}
+
 #home h1
     {
         border: 2px solid #D43F52;
